added daisy box

--- a/inventory.html
+++ b/inventory.html
@@ -474,7 +474,7 @@ const comboRecipes = {
 
 const itemRecipes = {
   "The Bleeder": { burger_buns: 1, ground_beef: 1, cheese_slices: 1 },
-  "The Double Shot": { burger_buns: 1, ground_beef: 1, lettuce: 1 },
+  "Double Shot": { burger_buns: 1, ground_beef: 1, lettuce: 1 },
   "Heart Stopper": { burger_buns: 1, ground_beef: 3, cheese_slices: 1 },
   "The Prickley": { burger_buns: 1, chicken: 1, lettuce: 1 },
   "The Simply": { burger_buns: 1, chicken: 1, bacon: 1 },
