--- a/register.html
+++ b/register.html
@@ -780,7 +780,7 @@
 
 <!-- PASSES (purchase only) -->
  <div class="item-card" data-name="Pounder Pass" data-price="15000" data-category="Passes" data-image="assets/images/pass.png" data-pass-type="pounder" data-is-pass-payment="true">
-  <img src="assets/images/pass.png" alt="The Pounder Pass" />
+  <img src="assets/images/monthlypass.png" alt="The Pounder Pass" />
   <h3>Pounder Pass</h3>
   <p>$15000</p>
   <div class="add-controls">
@@ -790,7 +790,7 @@
 </div>
 
 <div class="item-card" data-name="Bleeder Pass" data-price="25000" data-category="Passes" data-image="assets/images/pass.png" data-pass-type="bleeder" data-is-pass-payment="true">
-  <img src="assets/images/pass.png" alt="The Bleeder Pass" />
+  <img src="assets/images/monthlypass.png" alt="The Bleeder Pass" />
   <h3>Bleeder Pass</h3>
   <p>$25000</p>
   <div class="add-controls">
@@ -800,7 +800,7 @@
 </div>
 
 <div class="item-card" data-name="Big Buns Pass" data-price="35000" data-category="Passes" data-image="assets/images/pass.png" data-pass-type="bigbuns" data-is-pass-payment="true">
-  <img src="assets/images/pass.png" alt="Big Buns Pass" />
+  <img src="assets/images/monthlypass.png" alt="Big Buns Pass" />
   <h3>Big Buns Pass</h3>
   <p>$35000</p>
   <div class="add-controls">
