--- a/register.html
+++ b/register.html
@@ -843,6 +843,9 @@
       <div data-value="Stu">Stu</div>
       <div data-value="Tyrod">Tyrod</div>
       <div data-value="Craggie">Craggie</div>
+      <div data-value="Chaos">Chaos</div>
+      <div data-value="Rohan">Rohan</div>
+      <div data-value="Mac">Mac</div>
     </div>
   </div>
 </div>
