--- a/staffmeals.html
+++ b/staffmeals.html
@@ -354,15 +354,14 @@ select option:hover {
         <select id="employeeSelect" required>
           <option value="" disabled selected>Select employee</option>
           <option value="Savannah">Savannah</option>
-          <option value="Munch">Munch</option>
           <option value="Slade">Slade</option>
           <option value="Jack">Jack</option>
           <option value="Moe">Moe</option>
           <option value="James">James</option>
           <option value="Emeric">Emeric</option>
-          <option value="Stu">Stu</option>
-          <option value="Tyrod">Tyrod</option>
-          <option value="Craggie">Craggie</option>
+          <option value="Chaos">Chaos</option>
+          <option value="Rohan">Rohan</option>
+          <option value="Mac">Mac</option>
         </select>
       </div>
 
