--- a/register.html
+++ b/register.html
@@ -819,15 +819,14 @@
   <select id="employeeName" required style="display:none;">
     <option value="" disabled selected>Select employee</option>
     <option value="Savannah">Savannah</option>
-    <option value="Munch">Munch</option>
     <option value="Slade">Slade</option>
     <option value="Jack">Jack</option>
     <option value="Moe">Moe</option>
     <option value="James">James</option>
     <option value="Emeric">Emeric</option>
-    <option value="Stu">Stu</option>
-    <option value="Tyrod">Tyrod</option>
-    <option value="Craggie">Craggie</option>
+    <div data-value="Chaos">Chaos</div>
+      <div data-value="Rohan">Rohan</div>
+      <div data-value="Mac">Mac</div>
   </select>
   <!-- styled fake select -->
   <div class="custom-select">
