--- a/register.html
+++ b/register.html
@@ -819,20 +819,21 @@
   <select id="employeeName" required style="display:none;">
     <option value="" disabled selected>Select employee</option>
     <option value="Savannah">Savannah</option>
+    <option value="Mac">Mac</option>
     <option value="Slade">Slade</option>
     <option value="Jack">Jack</option>
     <option value="Moe">Moe</option>
     <option value="James">James</option>
-    <option value="Emeric">Emeric</option>
-    <div data-value="Chaos">Chaos</div>
-      <div data-value="Rohan">Rohan</div>
-      <div data-value="Mac">Mac</div>
+    <option value="Rohan">Rohan</option>
+    <option value="Chaos">Chaos</option>
+    
   </select>
   <!-- styled fake select -->
   <div class="custom-select">
     <div class="select-selected">Select employee</div>
     <div class="select-items select-hide">
       <div data-value="Savannah">Savannah</div>
+      <div data-value="Mac">Mac</div>
       <div data-value="Slade">Slade</div>
       <div data-value="Jack">Jack</div>
       <div data-value="Moe">Moe</div>
@@ -840,7 +841,6 @@
       <div data-value="Emeric">Emeric</div>
       <div data-value="Chaos">Chaos</div>
       <div data-value="Rohan">Rohan</div>
-      <div data-value="Mac">Mac</div>
     </div>
   </div>
 </div>
