--- a/register.html
+++ b/register.html
@@ -824,9 +824,9 @@
     <option value="Jack">Jack</option>
     <option value="Moe">Moe</option>
     <option value="James">James</option>
-    <option value="Rohan">Rohan</option>
+    <option value="Emeric">Emeric</option>
     <option value="Chaos">Chaos</option>
-    
+    <option value="Rohan">Rohan</option>
   </select>
   <!-- styled fake select -->
   <div class="custom-select">
