updated expired ingredients

--- a/inventory.html
+++ b/inventory.html
@@ -403,6 +403,7 @@
         <option value="cheese_slices">Cheddar Cheese Slices</option>
         <option value="chicken">Chicken</option>
         <option value="bacon">Bacon</option>
+         <option value="potato">Potatoes</option>
         <option value="coffee_beans">Coffee Beans</option>
         <option value="corn_syrup">Corn Syrup</option>
         <option value="tortilla">Tortillas</option>
