--- a/register.html
+++ b/register.html
@@ -827,6 +827,7 @@
     <option value="Emeric">Emeric</option>
     <option value="Chaos">Chaos</option>
     <option value="Rohan">Rohan</option>
+    <option value="Joey">Joey</option>
   </select>
   <!-- styled fake select -->
   <div class="custom-select">
@@ -841,6 +842,7 @@
       <div data-value="Emeric">Emeric</div>
       <div data-value="Chaos">Chaos</div>
       <div data-value="Rohan">Rohan</div>
+      <div data-value="Joey">Joey</div>
     </div>
   </div>
 </div>
