removed daisy and added rico

--- a/register.html
+++ b/register.html
@@ -576,15 +576,6 @@
 </p>
       <div class="item-grid">
   <!-- Combos -->
-   <div class="item-card" data-name="Daisy Family Box" data-price="2500" data-category="Combos" data-image="assets/images/combo.png">
-  <img src="assets/images/patty-slinger.png" alt="Daisy Family Box" />
-  <h3>Daisy Family Box</h3>
-  <p>$2500</p> <!-- TODO: set price when you’re ready -->
-  <div class="add-controls">
-    <input type="number" class="quantity-input" min="1" value="1" />
-    <button class="add-btn">Add</button>
-  </div>
-</div>
    <div class="item-card" data-name="Big Buns Deal" data-price="1700" data-category="Combos" data-image="assets/images/bleederbox.png">
     <img src="assets/images/combo.png" alt="Big Buns Deal" />
     <h3>Big Buns Deal</h3>
@@ -828,6 +819,7 @@
     <option value="Chaos">Chaos</option>
     <option value="Rohan">Rohan</option>
     <option value="Joey">Joey</option>
+    <option value="Rico">Rico</option>
   </select>
   <!-- styled fake select -->
   <div class="custom-select">
@@ -843,6 +835,7 @@
       <div data-value="Chaos">Chaos</div>
       <div data-value="Rohan">Rohan</div>
       <div data-value="Joey">Joey</div>
+      <div data-value="Rico">Rico</div>
     </div>
   </div>
 </div>
