--- a/staffmeals.html
+++ b/staffmeals.html
@@ -363,7 +363,7 @@ select option:hover {
           <option value="Chaos">Chaos</option>
           <option value="Rohan">Rohan</option>
           <option value="Joey">Joey</option>
-          
+          <option value="Rico">Rico</option>
         </select>
       </div>
 
